--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
